syntax = "proto3";

import "streamlit/proto/Widget.proto";

// A message from the browser to the server.
message BackMsg {
  oneof type {
    // Set to true to ask the server to display the inline help.
    // bool help = 1;  DEPRECATED

    // Set to true to ask the server to upload the report.
    bool cloud_upload = 2;

    // Asks the server to run the script with this given command line.
    string rerun_script = 3;

    // DEPRECATED - Asks the server to run the script with this object
    // ReRun rerun = 4;

    // Requests that the report's @st_cache be cleared
    bool clear_cache = 5;

    // Requests that the runOnSave behavior for this report be set
    // to the given value
    bool set_run_on_save = 6;

    // Requests that the report's execution be stopped
    bool stop_report = 7;

    // string widget_json = 8;

    WidgetStates update_widgets = 9;

    // Set to true to ask the server to close the connection
    bool close_connection = 10;
  }
}
