syntax = "proto3";

import "streamlit/proto/DataFrame.proto";

message DeckGlChart {
  // The dataframe that will be used as the chart's main data source.
  DataFrame data = 1;

  // A JSON-formatted string with the viewport spec.
  string spec = 2;

  repeated DeckGLLayer layers = 3;
}

message DeckGLLayer {
  // The dataframe that will be used as the source for this layer.
  DataFrame data = 1;

  // A JSON-formatted string with the layer spec.
  string spec = 2;
}
