syntax = "proto3";

import "DataFrame.proto";
import "DataTransform.proto";

message VegaLiteChart {
  // The a JSON-formatted string with the Vega Lite spec.
  string spec = 1;

  // The dataframe that will be used as the chart's main data source.
  // NOTE: Differently from Vega Lite, we only support 1 dataframe per chart
  // right now.
  DataFrame data = 2;

  // Specifies any transformation that should be applied to the data first, for
  // this type of chart to work.
  DataTransform data_transform = 3;
}
